# Kushim

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: mvp-smoke.yml
documentation/: README.md
documentation/architecture/: cashflow-classification.md  data-flow.md  historical-fx-foundation.md  historical-valuation-provenance.md  market-data-quality-contract.md  overview.md  portfolio-performance-contract.md  service-boundaries.md
documentation/database/: database-architecture.md  portfolio-reconstruction.md
documentation/mvp/: deferred-todos.md  mvp-scope.md
documentation/operations/: auth-session-lifecycle.md  backend-demo-e2e.md  ci-smoke-checks.md  docker-local-dev.md  local-reset-and-diagnostics.md  mvp-demo-runbook.md  validation-commands.md
documentation/reports/: audit-mvp-readiness-2026-06-11.fr.md  kushim-mvp-progress-report.en.md  kushim-mvp-progress-report.fr.md
infra/nginx/: README.md  default.conf
infra/postgres/: README.md
infra/redis/: README.md
kushim-api/: .env.example  Cargo.toml  Dockerfile  README.md
kushim-api/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs  test_support.rs
kushim-api/src/auth/: claims.rs  extractor.rs  mod.rs
kushim-api/src/db/: mod.rs
kushim-api/src/domain/: asset.rs  currency.rs  mod.rs  portfolio.rs  portfolio_operation.rs  portfolio_read_model.rs  portfolio_refresh_request.rs  portfolio_snapshot.rs
kushim-api/src/http/: assets.rs  extractors.rs  health.rs  idempotency.rs  me.rs  mod.rs  portfolio_operations.rs  portfolio_read_models.rs  portfolio_snapshots.rs  portfolios.rs  reference.rs
kushim-api/src/repositories/: assets.rs  mod.rs  portfolio_operation_idempotency.rs  portfolio_operations.rs  portfolio_read_models.rs  portfolio_refresh_requests.rs  portfolio_snapshots.rs  portfolios.rs
kushim-api/src/services/: assets.rs  mod.rs  operation_fingerprint.rs  portfolio_operations.rs  portfolio_read_models.rs  portfolio_snapshots.rs  portfolios.rs
kushim-app/: .env.example  Dockerfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
kushim-app/src/: test-setup.ts
kushim-auth/api/: .env.example  Cargo.toml  Dockerfile  README.md
kushim-auth/api/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
kushim-auth/api/src/db/: mod.rs
kushim-auth/api/src/domain/: mod.rs  recovery.rs  role.rs  token.rs  user.rs
kushim-auth/api/src/http/: auth.rs  extractors.rs  handoff.rs  health.rs  me.rs  middleware.rs  mod.rs
kushim-auth/api/src/repositories/: mod.rs  recovery_phrases.rs  revoked_tokens.rs  roles.rs  users.rs
kushim-auth/api/src/services/: auth.rs  handoff.rs  mod.rs  password.rs  rate_limit.rs  recovery.rs  token.rs
kushim-auth/api/tests/: auth.rs  http.rs  repositories.rs
kushim-auth/front/: .env.local.example  Dockerfile  README.md  eslint.config.mjs  (+6 more)
kushim-market-data/: .env.example  Cargo.toml  Dockerfile  README.md
kushim-market-data/src/: config.rs  db.rs  errors.rs  health.rs  lib.rs  main.rs  runner.rs  state.rs  symbol_filter.rs  test_utils.rs
kushim-market-data/src/domain/: fx_rate.rs  mod.rs
kushim-market-data/src/jobs/: fill_missing_fx_history_cache.rs  fill_missing_price_history_cache.rs  mod.rs  noop.rs  refresh_current_market_data.rs
kushim-market-data/src/providers/: finnhub.rs  fx_history_provider.rs  mock.rs  mock_fx_history.rs  mod.rs
kushim-market-data/src/repositories/: asset_market_data.rs  assets.rs  fx_rate_history_cache.rs  mod.rs  price_history_cache.rs
kushim-website/: .env.local.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
kushim-worker/: .env.example  Cargo.toml  Dockerfile  README.md
kushim-worker/src/: config.rs  errors.rs  main.rs  state.rs  test_utils.rs
kushim-worker/src/calculation/: mod.rs  portfolio_replay.rs
kushim-worker/src/db/: mod.rs
kushim-worker/src/domain/: mod.rs  portfolio_backfill.rs  portfolio_snapshot.rs  portfolio_state.rs
kushim-worker/src/health/: mod.rs
kushim-worker/src/jobs/: backfill_daily_snapshots.rs  generate_daily_snapshots.rs  mod.rs  noop.rs  process_portfolio_refresh_requests.rs  rebuild_current_read_models.rs  refresh_current_portfolio_state.rs
kushim-worker/src/repositories/: backfill_snapshots.rs  mod.rs  read_model_rebuild.rs  refresh_requests.rs  snapshot_generation.rs
kushim-worker/src/worker/: mod.rs  runner.rs  shutdown.rs
scripts/: README.md
(+154 files in other folders)
