[package]
name = "kushim-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "kushim_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bigdecimal = "0.4.9"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
redis = { version = "1.0.0-alpha.1", default-features = false, features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
