[package]
name = "kushim-market-data"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
thiserror = "2.0.18"
time = "0.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5.2"
