[package]
name = "kushim-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tokio-util = "0.7.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
