[package]
name = "kushim-auth-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "kushim_auth_api"
path = "src/lib.rs"

[dependencies]
axum = "0.8.7"
anyhow = "1.0.100"
argon2 = "0.5.3"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
once_cell = "1.21.3"
password-hash = "0.5.0"
regex = "1.12.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
